# smores_my_code

SMORES_LineLaser/: CMakeLists.txt  CMakeLists.txt~  LineLaser.cc  LineLaser.cc~  LineLaser.hh  LineLaser.hh~  SMORES_LineLaser.kdev4  raytest.cc
runtime_config/SMORES6Uriah/: SMORE.sdf  World.sdf
runtime_config/SMORES_LIDAR/: LIDAR.sdf
runtime_config/SMORES_camera/: camera.sdf
runtime_config/my_SMORES6Uriah/: InitialConfiguration  SMORE.sdf  World.sdf  sensing_world.sdf
runtime_config/sensing_env/: model.config  model.config~  sensing_environment.sdf  sensing_world.sdf
runtime_config/trial_walls/: model.config  trial_walls.sdf
smore_control/: CMakeLists.txt  GLViewer.cpp  GLViewer.h  main.cpp  pcl_octree_impl.cpp  smore_control.kdev4  smorescontrollerwindow.cpp  smorescontrollerwindow.h  smorescontrollerwindow.ui  zpr.c  zprdemo.c
smore_control/.kdev4/: smore_control.kdev4
smore_control/lib/: liboctomap.so.1.6
smore_control/smore_control/: CMakeLists.txt  CMakeLists.txt~  GLViewer.cpp  GLViewer.h  main.cpp  main.cpp~  pcl_octree_impl.cpp  pcl_octree_impl.h  smorescontrollerwindow.cpp  smorescontrollerwindow.h  smorescontrollerwindow.ui
smore_control/smore_control/.kdev4/: smore_control.kdev4
smore_control/smore_control/lib/: liboctomap.so.1.6.6  liboctomath.so.1.6.6
smore_control/smore_control/msgs/: CMakeLists.txt  world_command_message.proto
